5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4330/executions/1834_2604.log
== SUBMITION (2019-06-27 15:15:43) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- EXECUTION TIME:
0.905355
-- ERROR:
  File "/home/codebench/codes/1834/2604/main.py", line 6
    for i in range(shape(pagamento)[0]):
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:16:06) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("")))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 15:16:08) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("")))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:16:09) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("")))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- EXECUTION TIME:
2.35826
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:16:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("")))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- EXECUTION TIME:
3.23523
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 15:16:10) 
-- CODE:
from numpy import *
from numpy.linalg import *

pagamento = array(eval(input("")))

for i in range(shape(pagamento)[0]):
	for j in range(7):
		if(pagamento[i,j] == max(pagamento[i,:])):
			print(pagamento[i,j])
-- EXECUTION TIME:
1.23378
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
